# NewDiscordBot

./: .gitignore  README.md  data.db  database.py  main.py  pyproject.toml
Databases/: backup.db  data.db
cogs/: admin.py  games.py  listeners.py  misc.py  poll.py  text.py
cogs/games/: titactoe.py
