[tool.poetry]
name = "repl_python3_NewDiscordBot"
version = "0.1.0"
description = ""
authors = ["TheLegendBeacon <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
jishaku = "^1.20.0"
discord = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
